# suggbot

./: .gitignore  Dockerfile  flake.nix  suggbot.cabal
app/: Main.hs
