cabal-version:      3.0
name:               suggbot
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable suggbot
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.19,
        telegram-bot-simple,
        telegram-bot-api,
        text,
        dotenv-micro
    hs-source-dirs:   app
    default-language: GHC2021
